# ocaml-afl-examples

./: .drone.yml  .gitignore  README.md
awesome-list/fuzz/: dune  fuzz.ml
awesome-list/lib/: awesome_list.ml  awesome_list.mli  dune
simple-parser/fuzz/: dune  fuzz_me.ml
simple-parser/fuzz/input/: invalid
simple-parser/lib/: dune  simple_parser.ml  simple_parser.mli
