(executable
 (name fuzz)
 (libraries awesome_list crowbar))

(alias
 (name fuzz)
 (deps
  fuzz.exe
  (source_tree inputs))
 (action
  (run afl-fuzz -i inputs -o findings -- ./fuzz.exe @@)))

(alias
 (name bun-fuzz)
 (deps
  fuzz.exe
  (source_tree input))
 (action
  (run bun --input inputs --output findings -- ./fuzz.exe)))

(alias
 (name bun-fuzz-no-kill)
 (deps
  fuzz.exe
  (source_tree input))
 (action
  (run timeout --preserve-status 5m bun --no-kill --input inputs --output
    findings -- ./fuzz.exe)))
