(executable
 (name fuzz_me)
 (libraries simple_parser))

(alias
 (name fuzz)
 (deps
  (:exe fuzz_me.exe)
  (source_tree inputs))
 (action
  (run afl-fuzz -i inputs -o findings -- ./%{exe} @@)))

(alias
 (name bun-fuzz)
 (locks %{project_root}/bun)
 (deps
  (:exe fuzz_me.exe)
  (source_tree input))
 (action
  (run bun --input inputs --output findings -- ./%{exe})))
